third_party/move/move-compiler-v2/tests/checking/typing/recursive_constant.exp

Diagnostics:
error: Found recursive definition of a constant `X`; cycle formed by definitions below
  ┌─ tests/checking/typing/recursive_constant.move:3:5
  │
3 │     const X: u64 = Y;
  │     ^^^^^^^^^^^^^^^^^
  │     │
  │     `X` is defined here
4 │     const Y: u64 = X;
  │     ----------------- `Y` is defined here

error: Found recursive definition of a constant `F`; cycle formed by definitions below
  ┌─ tests/checking/typing/recursive_constant.move:6:5
  │
6 │     const F: u64 = F;
  │     ^^^^^^^^^^^^^^^^^
  │     │
  │     `F` is defined here

error: Invalid expression in `const`. Constant folding failed due to incomplete evaluation
  ┌─ tests/checking/typing/recursive_constant.move:8:8
  │
8 │        Z + A
  │        ^^^^^

error: Invalid expression in `const`. Constant folding failed due to incomplete evaluation
   ┌─ tests/checking/typing/recursive_constant.move:10:20
   │
10 │     const A: u64 = B + C;
   │                    ^^^^^

error: Found recursive definition of a constant `A`; cycle formed by definitions below
   ┌─ tests/checking/typing/recursive_constant.move:10:5
   │
 7 │ ╭     const X1: u64 = {
 8 │ │        Z + A
 9 │ │     };
   │ ╰──────' `X1` is defined here
10 │       const A: u64 = B + C;
   │       ^^^^^^^^^^^^^^^^^^^^^
   │       │
   │       `A` is defined here
11 │       const B: u64 = X1;
   │       ------------------ `B` is defined here

error: Invalid expression in `const`. Constant folding failed due to incomplete evaluation
   ┌─ tests/checking/typing/recursive_constant.move:12:20
   │
12 │     const C: u64 = Z + B;
   │                    ^^^^^
